MediaRecorder.stop() fires an additional dataavailable event with bytes after MediaRecorder.pause() https://bugs.webkit.org/show_bug.cgi?id=243837 rdar://problem/98565949

Reviewed by Eric Carlson.

When fetching recorded data, make sure to flush encoders to get all possible data.
This allows to ensure that we get as much data as possible when requestData is called.
This aligns with other browsers behavior.

Covered by added test.

* LayoutTests/http/wpt/mediarecorder/pause-recording-expected.txt:
* LayoutTests/http/wpt/mediarecorder/pause-recording.html:
* Source/WebCore/platform/mediarecorder/cocoa/AudioSampleBufferCompressor.h:
(WebCore::AudioSampleBufferCompressor::finish):
(WebCore::AudioSampleBufferCompressor::flush):
* Source/WebCore/platform/mediarecorder/cocoa/AudioSampleBufferCompressor.mm:
(WebCore::AudioSampleBufferCompressor::flushInternal):
(WebCore::AudioSampleBufferCompressor::finish): Deleted.
* Source/WebCore/platform/mediarecorder/cocoa/MediaRecorderPrivateWriterCocoa.mm:
(WebCore::MediaRecorderPrivateWriter::fetchData):
* Source/WebCore/platform/mediarecorder/cocoa/VideoSampleBufferCompressor.h:
(WebCore::VideoSampleBufferCompressor::finish):
(WebCore::VideoSampleBufferCompressor::flush):
* Source/WebCore/platform/mediarecorder/cocoa/VideoSampleBufferCompressor.mm:
(WebCore::VideoSampleBufferCompressor::flushInternal):
(WebCore::VideoSampleBufferCompressor::finish): Deleted.

Canonical link: https://commits.webkit.org/253529@main